deploy/golang-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-api-deployment
  namespace: kubernetes-101
  labels:
    app: golang-api
    environment: production
spec:
  selector:
    matchLabels:
      app: golang-api
      environment: production
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: golang-api
        environment: production
    spec:
      hostname: golang-api
      containers:
        - name: golang-api
          image: adiatma/golang-api
          imagePullPolicy: Always
          ports:
            - name: http-golang-api
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: http-golang-api
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 1
            successThreshold: 1
          resources:
            requests:
              memory: "54Mi"
              cpu: "250m"
            limits:
              memory: "54Mi"
              cpu: "250m"
          volumeMounts:
            - name: empty-volume
              mountPath: /volume
            - name: secret-config
              readOnly: true
              mountPath: "/secret" # setup secret path
            - name: config
              readOnly: true
              mountPath: "/config" # setup config path
      volumes:
        - name: empty-volume
          emptyDir: {}
        - name: secret-config
          secret:
            secretName: secret-config
        - name: config
          configMap:
            name: config
            items:
            - key: "config.yaml"
              path: "config.yaml"
