deploy/golang-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: golang-api-service
  namespace: kubernetes-101
  annotations:
    prometheus.io/scheme: 'http'
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '8000'
  labels:
    app: golang-api
    environment: production
spec:
  selector:
    app: golang-api
    environment: production
  ports:
    - name: http-golang-api-service
      protocol: TCP
      port: 8000
      targetPort: http-golang-api
  type: ClusterIP # default ClusterIP, options: NodePort, LoadBalancer
