deploy/golang-api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-api-ingress
  namespace: kubernetes-101
  labels:
    app: golang-api
    environment: production
spec:
  ingressClassName: nginx
  # https://kubernetes.io/docs/concepts/services-networking/ingress/#simple-fanout
  rules:
    - host: adiatma.local
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
            service:
              name: golang-api-service
              port:
                number: 8000
